fixed conflict with off canvas and overflow tabs

--- a/components/tabs/tabs.less
+++ b/components/tabs/tabs.less
@@ -66,7 +66,7 @@
 @media (min-width: 520px) and (max-width: @screen-xs-max) {
     .nav-tabs {
         display: block;
-        width: 107%;
+        width: 107% !important;
         margin-left: -15px;
         margin-right: -15px;
         > li {
@@ -214,7 +214,7 @@
 @media (min-width: 100px) and (max-width: 520px) {
     .nav-tabs {
         display: block;
-        width: 112%;
+        width: 112% !important;
         margin-left: -15px;
         margin-right: -15px;
 
@@ -428,7 +428,9 @@
             }
             &.active {
                 left:-100%;
+
             }
+            
 
             .nav-tabs > li> a > .icon-ui-arrowright {
                 float:right;
@@ -450,7 +452,16 @@
                 .tab-pane {
                     min-height: 3000px;
                     background: @body-bg;
+                    &.active {
+                        padding-left: 10px;
+                        padding-right:10px;
+                        button[data-toggle="offcanvas"] {
+                            margin-left:-10px;
+                            width:110%;
+                        }                        
+                    }
                 }
+                
             }
         }
 
@@ -474,7 +485,6 @@
                 right:-108%;
                 z-index: 1000;
             }
-
             .tab-content {
                 position: fixed;
                 top: -11px;
